# lm

./: .gitignore  LICENSE  README.md  pyproject.toml
schemas/: operation.schema.json  text_source.schema.json
src/spargel_lm/: text_source.py
