[project]
name = "spargel-lm"
version = "0.1.0"
description = "A project for learning and testing language models"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]

dependencies = ["numpy>=2.4.2", "pydantic>=2.12.5", "regex>=2026.2.19"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cpu = ["torch>=2.10.0"]
cu128 = ["torch>=2.10.0"]
cu130 = ["torch>=2.10.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
spargel-lm = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ruff>=0.15.4", "spargel-lm"]

[tool.ruff.lint]
extend-select = ["I"]
